--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,11 @@
-FROM public.ecr.aws/lambda/python:3.12
+FROM public.ecr.aws/docker/library/python:3.12.0-slim-bullseye
+COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.9.0 /lambda-adapter /opt/extensions/
 
-COPY ./api ./api
-
-COPY requirements.txt .
+WORKDIR /app
+COPY . .
 
 RUN pip3 install -r requirements.txt -U --no-cache-dir
 
-CMD [ "api.app.handler" ]
+ENV AWS_LWA_INVOKE_MODE=RESPONSE_STREAM
+ENV PORT=8000
+CMD [ "python3", "-m", "api.app" ]
